Create a DB schema for Workflows and Jobs, change API
